# inf-wasm-tools

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  publish.yml
inf-wasmparser/: Cargo.toml  README.md
inf-wasmparser/src/: binary_reader.rs  lib.rs  validator.rs
inf-wasmparser/src/readers/component/: types.rs
inf-wasmparser/src/readers/core/: operators.rs
inf-wasmparser/src/validator/: component.rs  component_types.rs
inf-wasmparser/tests/: big-module.rs  inference-blocks.rs  uzumaki.rs
inf-wast/: Cargo.toml  README.md
inf-wast/src/: lib.rs  parser.rs
inf-wast/src/core/: expr.rs
wast/: Cargo.toml  README.md
wast/src/core/: binary.rs  expr.rs
wast/tests/: uzumaki.rs
wat-fmt/: Cargo.toml
wat-fmt/src/: lib.rs
