[workspace]

resolver = "2"

members = [
    "inf-wast",
    "inf-wasmparser",
]

[workspace.package]
version = "0.0.4"
edition = "2021"
license = "MIT"
homepage = "https://inferara.com"
repository = "https://github.com/Inferara/inf-wasm-tools"

[workspace.dependencies]
inf-wast = { path = "inf-wast" }
inf-wasmparser = { path = "inf-wasmparser" }
anyhow = "1.0.40"
leb128 = "0.2.5"